Removed Parallax from main block
see if this works

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 </nav>
 
-<section class="mbr-section mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-0" style="background-image: url(assets/images/full-unsplash-photo-1470072242968-5602a4283d62-2000x1344-5.jpg);">
+<section class="mbr-section mbr-section-full mbr-after-navbar" id="header4-0" style="background-image: url(assets/images/full-unsplash-photo-1470072242968-5602a4283d62-2000x1344-5.jpg);">
     <div class="mbr-table-cell">
         
         <div class="container">
@@ -150,7 +150,7 @@
 
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank You!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="Share your Thoughts">
-                    <input type="hidden" value="NuVZKeUxyr5SLaqnUJv++Ym6Nx/Ot8nQBfmWbsLKDNxktCLpjd+VNh5NZBr0NmvFLCOHLp7+7hyQkNYJ/3el7as1LWasXdIQgT8LDCHh1B8Iva0doeEApNhCToNyxAy4" data-form-email="true">
+                    <input type="hidden" value="dFaOUuQcWzbT7lUsjmFWrU1rBhrf/5fK/oigVmmwdOM6tFpc5U61zfzTyb1uGeiPp0Kkr+VdAwm2xvW3UH1Ns3y/4JAKB67H/JipVMylPWtWpFFxg0rdag40mN6ur6wg" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                     </div>
@@ -195,7 +195,6 @@ UEN:&nbsp;T16LL0350E</p>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/puritym/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
