added google analytics

--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-85446248-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <nav class="navbar navbar-light mbr-navbar navbar-fixed-top" id="menu-6" style="background-color: rgb(255, 255, 255);">
     <div class="container">
         <button class="navbar-toggler pull-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
@@ -150,7 +165,7 @@
 
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank You!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="Share your Thoughts">
-                    <input type="hidden" value="hPWaAbld1xYl817gQQj/POYoZ18m/y18mWBGYTdJXhJcxgOS5FSx5UimS5dqVgk2CR99Ot9hKQ4bm/CUw7co1aSYV1Ib+P4qlH/FhJc10rt/qfYCutEfZScsZdyBIVzH" data-form-email="true">
+                    <input type="hidden" value="SnuQGRjmAlr4/87biBtTee3jJ25+1L745ZYfQRThbl32fdbAxs59QQmpFLE3UVxilaKH5FH/M87R7m8fc0NRA+LJmBqn46AQabmtD0teDMJ47HnoOedwZa6/vpVMs4EJ" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                     </div>
